# mango-lsp

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: PROJECT.md  STATUS.md
docs/stages/: S001-rust-cli-foundation.md  S002-downstream-stdio-lifecycle.md  S003-configuration-backed-workspace-symbols.md  TEMPLATE.md
src/: config.rs  diagnostics.rs  frame.rs  lib.rs  lifecycle.rs  main.rs  operation.rs  output.rs  protocol.rs  symbols.rs  uri.rs
tests/: cli.rs  downstream_lifecycle.rs  vertical_flow.rs
